welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: Unmatched closing brace '}' ignored here
 }
 ^SlugSnail:24: error: ';' expected but string literal found.
    if(getCouleurSol()) == "c"{
                           ^